@@ -42083,7 +42083,7 @@ status collapsed
 
 \end_inset
 
-n
+ <n>
 \emph default
  is used.
  (recommended for Chipcon CC1010).
