@@ -1,3 +1,8 @@
+2022-03-08 Gabriele Gorla <gorlik@yahoo.com>
+
+	* src/mos6502/gen.c:
+	  Fir corner cases in genPointerSet() and genPointerGet().
+
 2022-03-09 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/SDCCast.c,
@@ -18,6 +23,10 @@
 	* support/regression/tests/bitint.c,
 	  support/regression/tests/bitintarith.c:
 	  Somethings already work for _BitInt, so we can test them!
+
+2022-03-09 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* doc/sdccman.lyx: fixed bug #3343
 
 2022-03-08 Gabriele Gorla <gorlik@yahoo.com>
 
